--- a/pyrocko/data/snuffler_help.html
+++ b/pyrocko/data/snuffler_help.html
@@ -164,6 +164,12 @@ scaling &lt;pattern&gt; &lt;vmin&gt; &lt;vmax&gt;<br />
 scaling</tt></td>
 <td>Set scaling rules. <a href="http://emolch.github.com/pyrocko/snuffler.html#scaling">man</a></td>
 </tr>
+<tr><td></td><td></td></tr>
+<tr><td><tt>goto YYYY-MM[-DD[ HH[:MM[:SS[.XXX]]]]]<br />
+goto HH:MM[:SS[.XXX]]<br />
+goto &lt;eventname&gt;</tt></td>
+<td>Jump to given time or event. <a href="http://emolch.github.com/pyrocko/snuffler.html#goto">man</a></td>
+</tr>
 </tbody>
 </table>
 
