--- a/pyrocko/data/snuffler_help_epilog.html
+++ b/pyrocko/data/snuffler_help_epilog.html
@@ -1,1 +1,1 @@
-<a href="http://emolch.github.com/pyrocko/snuffler.html">Online Manual</a>
+<a href="http://emolch.github.com/pyrocko/v0.3/snuffler.html">Online Manual</a>
