--- a/pyrocko/data/snuffler_about.html
+++ b/pyrocko/data/snuffler_about.html
@@ -1,7 +1,8 @@
 <h1>Snuffler</h1><br />
 <img src="%(logo)s" />
 <h4 style="margin-top:2em;">Coding</h4>
-Sebastian Heimann
+Sebastian Heimann<br />
+Marius Kriegerowski
 <h4 style="margin-top:2em;">Credits</h4>
 Barbara Golebiowski<br />
 Carina Juretzek<br />
@@ -9,7 +10,6 @@ Francesco Grigoli<br />
 Joachim B&uuml;low<br />
 Kristina Meier<br />
 Lars Krieger<br />
-Marius Kriegerowski<br />
 Matthias Schneider<br />
 Simone Cesca<br />
 Stefan Trabs<br />
