updated contributors list

--- a/src/data/snuffler_about.html
+++ b/src/data/snuffler_about.html
@@ -6,11 +6,16 @@ Marius Kriegerowski
 <h4 style="margin-top:2em;">Credits</h4>
 Barbara Golebiowski<br />
 Carina Juretzek<br />
+Christof Lendl<br />
 Francesco Grigoli<br />
 Joachim B&uuml;low<br />
+Karl-Heinz J&auml;ckel<br />
 Kristina Meier<br />
 Lars Krieger<br />
 Matthias Schneider<br />
+Olga Zakharova<br />
 Simone Cesca<br />
 Stefan Trabs<br />
-Torsten Dahm
+Thomas Braun<br />
+Torsten Dahm<br />
+Trond Ryberg<br />
