snuffler_tutorial: Hint on the marker menu.

--- a/src/data/snuffler_help.html
+++ b/src/data/snuffler_help.html
@@ -61,6 +61,9 @@
 
 <td>Go to previous event marker</td>
 </tr>
+<tr><td><em>m</em></td>
+<td>Open Marker Table</td>
+</tr>
 <tr><td><em>a</em></td>
 <td>Select all markers currently visible</td>
 </tr>
