snuffler_help: new key event

--- a/src/data/snuffler_help.html
+++ b/src/data/snuffler_help.html
@@ -84,6 +84,9 @@
 <tr><td><em>e</em></td>
 <td>Convert to event marker / set active event / associate to event</td>
 </tr>
+<tr><td><em>E</em></td>
+<td>Deactivate event</td>
+</tr>
 <tr><td><em>&lt;f10&gt;</em></td>
 <td>Convert phase marker to normal marker</td>
 </tr>
