snuffler: 'G' to zoom to selection / zoom to trace visibility

--- a/src/data/snuffler_help.html
+++ b/src/data/snuffler_help.html
@@ -46,7 +46,9 @@
 </tr>
 <tr><td><em>g</em></td>
 <td>Go to selection / show all</td>
-
+</tr>
+<tr><td><em>G</em></td>
+<td>Zoom to selection / zoom to trace visibility</td>
 </tr>
 <tr><td><em>n</em></td>
 <td>Go to next marker</td>
