Changed Snuffler about

--- a/src/data/snuffler_about.html
+++ b/src/data/snuffler_about.html
@@ -2,7 +2,8 @@
 <img src="%(logo)s" />
 <h4 style="margin-top:2em;">Coding</h4>
 Sebastian Heimann<br />
-Marius Kriegerowski
+Marius Kriegerowski<br />
+Marius Isken
 <h4 style="margin-top:2em;">Credits</h4>
 Barbara Golebiowski<br />
 Carina Juretzek<br />
