fix broken links

--- a/src/data/snuffler_help.html
+++ b/src/data/snuffler_help.html
@@ -148,35 +148,35 @@
 </thead>
 <tbody>
 <tr><td><tt>n|s|l|c [ &lt;pattern&gt; ]</tt></td>
-<td>Reduce traces to those matching a given pattern. <a href="http://emolch.github.com/pyrocko/v0.3/snuffler.html#quick-search-traces">man</a></td>
+<td>Reduce traces to those matching a given pattern. <a href="https://pyrocko.org/docs/current/apps/snuffler/manual.html#quick-search-traces">man</a></td>
 </tr>
 <tr><td></td><td></td></tr>
 <tr><td><tt>hide &lt;pattern&gt;<br />
 hide n|s|l|c &lt;pattern&gt;</tt></td>
-<td>Hide traces whose network, station, location, and channel IDs match a given pattern. <a href="http://emolch.github.com/pyrocko/v0.3/snuffler.html#hide">man</a></td>
+<td>Hide traces whose network, station, location, and channel IDs match a given pattern. <a href="https://pyrocko.org/docs/current/apps/snuffler/manual.html#hide">man</a></td>
 </tr>
 <tr><td></td><td></td></tr>
 <tr><td><tt>unhide &lt;pattern&gt;<br />
 unhide n|s|l|c &lt;pattern&gt;</tt></td>
-<td>Unhide traces previously hidden with the hide command. <a href="http://emolch.github.com/pyrocko/v0.3/snuffler.html#unhide">man</a></td>
+<td>Unhide traces previously hidden with the hide command. <a href="https://pyrocko.org/docs/current/apps/snuffler/manual.html#unhide">man</a></td>
 </tr>
 <tr><td></td><td></td></tr>
 <tr><td><tt>markers [0][1][2][3][4][5]<br />
 markers all<br />
 markers</tt></td>
-<td>Toggle marker visibility. <a href="http://emolch.github.com/pyrocko/v0.3/snuffler.html#markers">man</a></td>
+<td>Toggle marker visibility. <a href="https://pyrocko.org/docs/current/apps/snuffler/manual.html#markers">man</a></td>
 </tr>
 <tr><td></td><td></td></tr>
 <tr><td><tt>scaling &lt;vmin&gt; &lt;vmax&gt;<br />
 scaling &lt;pattern&gt; &lt;vmin&gt; &lt;vmax&gt;<br />
 scaling</tt></td>
-<td>Set scaling rules. <a href="http://emolch.github.com/pyrocko/v0.3/snuffler.html#scaling">man</a></td>
+<td>Set scaling rules. <a href="https://pyrocko.org/docs/current/apps/snuffler/manual.html#scaling">man</a></td>
 </tr>
 <tr><td></td><td></td></tr>
 <tr><td><tt>goto YYYY-MM[-DD[ HH[:MM[:SS[.XXX]]]]]<br />
 goto HH:MM[:SS[.XXX]]<br />
 goto &lt;eventname&gt;</tt></td>
-<td>Jump to given time or event. <a href="http://emolch.github.com/pyrocko/v0.3/snuffler.html#goto">man</a></td>
+<td>Jump to given time or event. <a href="https://pyrocko.org/docs/current/apps/snuffler/manual.html#goto">man</a></td>
 </tr>
 </tbody>
 </table>
