--- a/src/data/snuffler_help_epilog.html
+++ b/src/data/snuffler_help_epilog.html
@@ -1,1 +1,1 @@
-<a href="http://emolch.github.com/pyrocko/v0.3/snuffler.html">Online Manual</a>
+<a href="https://pyrocko.org/docs/current/apps/snuffler/index.html">Online Manual</a>
