map_osm: no opacity

--- a/src/gui/snufflings/map/map_osm.html
+++ b/src/gui/snufflings/map/map_osm.html
@@ -183,30 +183,12 @@
 		}
 
 		function init() {
-			var plate_boundary_style = OpenLayers.Util.extend({}, OpenLayers.Feature.Vector.style['default']);	
-			plate_boundary_style.strokeWidth = 4; 
-			plate_boundary_style.strokeColor = "#827773";
-			plate_boundary_style.strokeOpacity = 1;
-
-			plate_boundaries = new OpenLayers.Layer.Vector("Plate Boundaries", {
-				strategies: [new OpenLayers.Strategy.Fixed()],
-				style: plate_boundary_style,
-				protocol: new OpenLayers.Protocol.HTTP({
-					url: "plates.kml",
-					format: new OpenLayers.Format.KML({
-						extractStyles: false, 
-						extractAttributes: false,
-						maxDepth: 2
-					})
-				})
-			})
-			plate_boundaries.setVisibility(false);
 
 			var aerial = new OpenLayers.Layer.Bing({
 				key: apiKey,
 				type: "Aerial",
 				isBaseLayer: false,
-				opacity: 0.6
+				opacity: 1.,
 			});
 			aerial.setVisibility(false);
 
@@ -217,14 +199,32 @@
 				emptyString: 'Mouse not over map'
 			});
 
+			var plate_boundary_style = OpenLayers.Util.extend({}, OpenLayers.Feature.Vector.style['default']);	
+			plate_boundary_style.strokeWidth = 4;
+			plate_boundary_style.strokeColor = "#f49842";
+			plate_boundary_style.strokeOpacity = 1;
+
+			plate_boundaries = new OpenLayers.Layer.Vector("Plate Boundaries", {
+				strategies: [new OpenLayers.Strategy.Fixed()],
+				style: plate_boundary_style,
+				protocol: new OpenLayers.Protocol.HTTP({
+					url: "plates.kml",
+					format: new OpenLayers.Format.KML({
+						extractStyles: false,
+						extractAttributes: false,
+						maxDepth: 2
+					})
+				})
+			})
+			plate_boundaries.setVisibility(false);
 
 			map = new OpenLayers.Map({
 				div: "map",
 				allOverlays: true,
 				layers: [
-				new OpenLayers.Layer.OSM(), 
+				new OpenLayers.Layer.OSM(),
+				aerial,
 				plate_boundaries,
-				aerial
 				],
 				controls: [
 				new OpenLayers.Control.LayerSwitcher({roundedCornerColor: "#999999"}),
