--- a/src/gui/snufflings/map/map_osm.html
+++ b/src/gui/snufflings/map/map_osm.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+	<script src="https://openlayers.org/en/latest/build/ol.js"></script>
 	<script type="text/javascript" src="http://maplib.khtml.org/khtml.maplib/khtml_all.js"> </script>
 	<script type="text/javascript" src="loadxmldoc.js"></script>
 	<script>
@@ -27,9 +27,9 @@
 		};
 
 		function get_standard_station_icon(){
-			var size = new OpenLayers.Size(15,15);
-			var offset = new OpenLayers.Pixel(-(size.w/2), -size.h);
-			var icon = new OpenLayers.Icon('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAbUlEQVQ4ja3OOwrAMAwDUN0rHXzzHK1dQnGJ68gfgTYhHsDlAjDILZW52hIBcK9Kx+FUh2WlqLMWpdaVlZaupLR0aaWnSyk9XVjJ6EJKRkcrIzpKGdEdlRmdq8zofpUVnams6DZlh+6j7NC9ygd+w8cw2AIG3AAAAABJRU5ErkJggg==', size, offset);
+			var size = new ol.Size(15,15);
+			var offset = new ol.Pixel(-(size.w/2), -size.h);
+			var icon = new ol.Icon('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAbUlEQVQ4ja3OOwrAMAwDUN0rHXzzHK1dQnGJ68gfgTYhHsDlAjDILZW52hIBcK9Kx+FUh2WlqLMWpdaVlZaupLR0aaWnSyk9XVjJ6EJKRkcrIzpKGdEdlRmdq8zofpUVnams6DZlh+6j7NC9ygd+w8cw2AIG3AAAAABJRU5ErkJggg==', size, offset);
 			return icon;
 		};
 
@@ -88,16 +88,16 @@
 		};
 
 		function get_transformed_lonlat(item){
-			var lonLat = new OpenLayers.LonLat(item.lon, item.lat);
-			lonLat.transform(new OpenLayers.Projection("EPSG:4326"),
+			var lonLat = new ol.LonLat(item.lon, item.lat);
+			lonLat.transform(new ol.Projection("EPSG:4326"),
 				map.getProjectionObject());
 			return lonLat;
 		};
 
 		function add_station_markers(map, items){
-			var markers = new OpenLayers.Layer.Markers( "Markers" );
-			var marker_labels = new OpenLayers.Layer.Vector("Labels", {
-				styleMap : new OpenLayers.StyleMap(
+			var markers = new ol.Layer.Markers( "Markers" );
+			var marker_labels = new ol.Layer.Vector("Labels", {
+				styleMap : new ol.StyleMap(
 					{'default':{
 						label: "${name}",
 						fontSize: "12px",
@@ -115,9 +115,9 @@
 				var item = items[i];
 				var icon = item.icon_data;
 				var lonlat = get_transformed_lonlat(item);
-				var m = new OpenLayers.Marker(lonlat, icon.clone());
-				var p = new OpenLayers.Geometry.Point(lonlat.lon, lonlat.lat);
-				var label = new OpenLayers.Feature.Vector(p);
+				var m = new ol.Marker(lonlat, icon.clone());
+				var p = new ol.Geometry.Point(lonlat.lon, lonlat.lat);
+				var label = new ol.Feature.Vector(p);
 				label.attributes = {name:item.nsl};
 				label_array[i] = label;
 				item.marker = m;
@@ -139,9 +139,9 @@
 		}
 
 		function add_event_markers(map, items, magmin, magmax, depth_min, depth_max){
-			var vectorLayer = new OpenLayers.Layer.Vector("Events", {
-				styleMap: new OpenLayers.StyleMap({
-					"default": new OpenLayers.Style({
+			var vectorLayer = new ol.Layer.Vector("Events", {
+				styleMap: new ol.StyleMap({
+					"default": new ol.Style({
 						pointRadius: "${radius}",
 						fillColor: '${fill_color}',
 						fillOpacity: 1.0,
@@ -161,9 +161,9 @@
 				var item = items[i];
 				var rad = magnitude_circle_radius(item.magnitude, magmin, magmax, magshift);
 				var lonlat = get_transformed_lonlat(item);
-				var point = new OpenLayers.Geometry.Point(lonlat.lon, lonlat.lat);
+				var point = new ol.Geometry.Point(lonlat.lon, lonlat.lat);
 				var c = item.get_fill_color(depth_min, depth_max);
-				var circle = new OpenLayers.Feature.Vector(point, {
+				var circle = new ol.Feature.Vector(point, {
 					radius: rad, description: item.get_event_description(),
 					fill_color: item.get_fill_color(depth_min, depth_max)});
 
@@ -175,7 +175,7 @@
 		}
 
 		function zoomToExtent(map, layers) {
-			bounds = new OpenLayers.Bounds();
+			bounds = new ol.Bounds();
 			for (i=0; i<layers.length; i++){
 				bounds.extend(layers[i].getDataExtent());
 			}
@@ -184,71 +184,66 @@
 
 		function init() {
 
-			var aerial = new OpenLayers.Layer.Bing({
-				key: apiKey,
-				type: "Aerial",
+			var aerial = new ol.layer.Tile({
+				visibility: false,
 				isBaseLayer: false,
-				opacity: 1.,
+				source: new ol.source.BingMaps({
+					imagerySet: "Aerial",
+					key: apiKey,
+				})
 			});
-			aerial.setVisibility(false);
 
-			var stamen_terrain = new OpenLayers.layer.Tile({
-		        source: new OpenLayers.source.Stamen({
+			var stamen_terrain = new ol.layer.Tile({
+				visibility: true,
+		        source: new ol.source.Stamen({
 		          layer: 'terrain'
 		        })
-			stamen_terrain.setVisibility(false);
+		    });
 
-			var mouse_control = new OpenLayers.Control.MousePosition({
-				prefix: 'Coordinates: ',
-				separator: ' | ',
-				numDigits: 3,
-				emptyString: 'Mouse not over map'
+			var plate_boundary_style = new ol.style.Style({
+				stroke: new ol.style.Stroke({
+					width: 4,
+					color: "#f49842",
+				})
 			});
 
-			var plate_boundary_style = OpenLayers.Util.extend({}, OpenLayers.Feature.Vector.style['default']);	
-			plate_boundary_style.strokeWidth = 4;
-			plate_boundary_style.strokeColor = "#f49842";
-			plate_boundary_style.strokeOpacity = 1;
-
-			plate_boundaries = new OpenLayers.Layer.Vector("Plate Boundaries", {
-				strategies: [new OpenLayers.Strategy.Fixed()],
+			plate_boundaries = new ol.layer.Vector("Plate Boundaries", {
+				visible: false,
+				renderMode: 'vector',
 				style: plate_boundary_style,
-				protocol: new OpenLayers.Protocol.HTTP({
-					url: "plates.kml",
-					format: new OpenLayers.Format.KML({
-						extractStyles: false,
-						extractAttributes: false,
-						maxDepth: 2
-					})
+				url: "plates.kml",
+				format: new ol.format.KML({
+					extractStyles: false,
+					extractAttributes: false,
+					maxDepth: 2
 				})
-			})
-			plate_boundaries.setVisibility(false);
+			});
 
-			map = new OpenLayers.Map({
+			map = new ol.Map({
 				div: "map",
 				allOverlays: true,
 				layers: [
-					new OpenLayers.Layer.OSM(),
+					stamen_terrain,
 					aerial,
 					plate_boundaries,
-					stamen_terrain,
 				],
 				controls: [
-				new OpenLayers.Control.LayerSwitcher({roundedCornerColor: "#999999"}),
-				new OpenLayers.Control.Attribution(),
-				new OpenLayers.Control.PanZoomBar(),
-				new OpenLayers.Control.Navigation(),
-				new OpenLayers.Control.ScaleLine(),
-				mouse_control,
+				/*new ol.Control.LayerSwitcher({roundedCornerColor: "#999999"}),*/
+				new ol.control.Attribution(),
+				new ol.control.Zoom(),
+				new ol.control.MousePosition(),
+				/*new ol.control.Navigation(),*/
+				new ol.control.ScaleLine(),
 				],
-				displayProjection:  new OpenLayers.Projection("EPSG:4326"),
-				numZoomLevels: 7,
+				view: new ol.View({
+				  projection: 'EPSG:4326'
+				})
 			});
 
 			layerListeners = {
 				featureclick: function(e) {
-					var popup = new OpenLayers.Popup.FramedCloud("popup",
-						OpenLayers.LonLat.fromString(e.feature.geometry.toShortString()),
+					var popup = new ol.Popup.FramedCloud("popup",
+						ol.LonLat.fromString(e.feature.geometry.toShortString()),
 						null,
 						"<div style='font-size:.8em'>Event:<br>" + e.feature.attributes.description+"</div>",
 						null,
@@ -260,9 +255,9 @@
 				},
 			};
 
-			epsg4326 = new OpenLayers.Projection("EPSG:4326");
-			projectTo = map.getProjectionObject();
-			var data = myxmlExtractor(xmlDoc);
+			/*epsg4326 = new ol.Projection("EPSG:4326");*/
+/*			projectTo = map.getProjectionObject();
+*/			var data = myxmlExtractor(xmlDoc);
 			var stations = data[0];
 			var events = data[1];
 			var magnitudes = data[2];
