--- a/src/gui/snufflings/map/map_osm.html
+++ b/src/gui/snufflings/map/map_osm.html
@@ -8,84 +8,11 @@
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="http://maplib.khtml.org/khtml.maplib/khtml_all.js"> </script>
+    <script type="text/javascript" src="map_util.js"> </script>
     <script type="text/javascript" src="loadxmldoc.js"></script>
-</head>
-<body onload="init();">
-    <div class="map" id="map"><div id="popup"></div></div>
-    <div id="logger"></div>
     <script>
-        try{
-            xmlDoc = loadXMLDoc("markers.xml");
-        }
-        catch(err)
-        {
-            txt="An error occurred while trying to read dumped pyrocko marker.\n\n";
-            txt+="Probably, your browser does not allow to open that document\n\n";
-            txt+="due to the \"Same-Origin-Policy\".\n\n";
-            txt+="A solution might be to change your default browser.\n\n";
-            alert(txt);
-        }
-
         var apiKey = "ApTJzdkyN1DdFKkRAE6QIDtzihNaf6IWJsT-nQ_2eMoO4PN__0Tzhl2-WgJtXFSp";
-
-        function Station(lat, lon, nsl, icon_data){
-            this.lat = lat;
-            this.lon = lon;
-            this.nsl = nsl;
-        };
-
-        function Event(lat, lon, time, depth, magnitude, icon_data){
-            this.lat = lat;
-            this.lon = lon;
-            this.time = time || 0;
-            this.depth = depth || 0;
-            this.magnitude = magnitude || 0;
-            this.get_event_description = function(){
-                return "Magnitude " + this.magnitude.toFixed(2) + "<br>" + this.time + "<br>Depth: " + (this.depth/1000).toFixed(2) + " km"
-            };
-
-            this.get_fill_color = function(depth_min, depth_max){
-                if (depth_min==depth_max)
-                    scale = 0.5;
-                else
-                    var scale = (this.depth-depth_min)/(depth_max-depth_min);
-                var r = parseInt(255 * scale);
-                var b = parseInt(255 * (1-scale));
-                return 'rgba(' + r + ',0,'+ b + ',0.5)';
-            };
-        };
-
-        function myxmlExtractor(xmlDoc){
-            deb = xmlDoc.getElementsByTagName("event")
-            var events = [];
-            var magnitudes = [];
-            var depths = [];
-
-            for (i=0; i<deb.length; i++)
-            {
-                var lat = deb[i].childNodes[3].firstChild.data;
-                var lon = deb[i].childNodes[5].firstChild.data;
-                var time = deb[i].childNodes[7].firstChild.data;
-                var depth = deb[i].childNodes[11].firstChild.data;
-                var mag = parseFloat(deb[i].childNodes[9].firstChild.data);
-                magnitudes[magnitudes.length] = mag;
-                depths[depths.length] = depth;
-                var event = new Event(lat, lon, time, depth, mag);
-
-                events[events.length] = event;
-            };
-
-            var stations = [];
-            stationElements=xmlDoc.getElementsByTagName("station")
-            for (i=0; i<stationElements.length; i++)
-            {
-                var nsl = stationElements[i].childNodes[1].firstChild.data;
-                var lat = stationElements[i].childNodes[3].firstChild.data;
-                var lon = stationElements[i].childNodes[5].firstChild.data;
-                stations[stations.length] = new Station(lat, lon, nsl);
-            }
-            return [stations, events, magnitudes, depths];
-        };
+        xmlDoc = load_markers("markers.xml")
 
         function get_transformed_lonlat(item){
             return ol.proj.fromLonLat([parseFloat(item.lon), parseFloat(item.lat)]);
@@ -130,13 +57,6 @@
             return station_layer;
         };
 
-        function magnitude_circle_radius(magnitude, magmin, magmax, magshift) {
-            if (magmax == magshift)
-                return 8;
-            else
-                return 2.+Math.exp(2.*(magnitude+magshift-magnitude_min)/(magnitude_max-magnitude_min));
-        }
-
         function get_event_layer(items, magmin, magmax, depth_min, depth_max) {
 
             if (magmin < 0)
@@ -152,7 +72,6 @@
             for (i=0; i<items.length; i++) {
                 var item = items[i];
                 var rad = magnitude_circle_radius(item.magnitude, magmin, magmax, magshift);
-                /*item.get_fill_color(depth_min, depth_max),*/
 
                 var style = new ol.style.Style({
                     image: new ol.style.Circle({
@@ -195,8 +114,14 @@
             map.getView().fit(extent, map.getSize());
         };
 
-        function init() {
+    </script>
 
+</head>
+<body onload="init();">
+    <div class="map" id="map"><div id="popup"></div></div>
+    <div id="logger"></div>
+    <script type="text/javascript">
+        function init() {
             var aerial = new ol.layer.Tile({
                 visibility: false,
                 isBaseLayer: false,
@@ -240,17 +165,15 @@
             var magnitudes = data[2];
             var depths = data[3];
 
-            if (magnitudes.length==1){
-                magnitude_min = 0;
-                magnitude_max = 0;
-                depth_min = 10;
-                depth_max = 10;
-            } else {
-                magnitude_min = Math.min.apply(Math, magnitudes);
-                magnitude_max = Math.max.apply(Math, magnitudes);
-                depth_min = Math.min.apply(Math, depths);
-                depth_max = Math.max.apply(Math, depths);
+            magnitude_min = 0;
+            magnitude_max = 0;
+            depth_min = 10;
+            depth_max = 10;
+            if (magnitudes.length>1){
+                magnitude_min, magnitude_max = get_minmax(magnitudes)
+                depth_min, depth_max = get_minmax(depths);
             }
+
             var event_layer = get_event_layer(events, magnitude_min, magnitude_max, depth_min, depth_max);
             var station_layer = get_station_layer(stations);
 
