osm: remove vertical scroll bars

--- a/src/gui/snufflings/map/map_osm.html
+++ b/src/gui/snufflings/map/map_osm.html
@@ -128,7 +128,10 @@
         </ul>
       </div>
     </nav>
-    <div class="map" id="map"><div id="popup"></div></div>
+    <div class="container-fluid">
+        <div class="row" id="map" style="height: 90%;" ></div>
+        <div id="popup"></div>
+    </div>
 
     <script type="text/javascript">
 
