--- a/src/gui/snufflings/map/map_osm.html
+++ b/src/gui/snufflings/map/map_osm.html
@@ -368,7 +368,7 @@
        * @return {string} The formatted length.
        */
       var formatLength = function(line) {
-        var length = ol.Sphere.getLength(line);
+        var length = ol.sphere.getLength(line);
         var output;
         if (length > 100) {
           output = (Math.round(length / 1000 * 100) / 100) +
@@ -387,7 +387,7 @@
        * @return {string} Formatted area.
        */
       var formatArea = function(polygon) {
-        var area = ol.Sphere.getArea(polygon);
+        var area = ol.sphere.getArea(polygon);
         var output;
         if (area > 10000) {
           output = (Math.round(area / 1000000 * 100) / 100) +
